--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}首页{% endblock %}\
 {% block head %}
-    <script type="text/javascript" src="http://echarts.baidu.com/dist/echarts.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/echarts/5.5.0/echarts.js"></script>
 {% endblock %}
 
 {% block body %}
